--- a/index_ru.html
+++ b/index_ru.html
@@ -12,8 +12,8 @@
             <img src="images/header-logo.svg" alt="logo" class="header__logo">
         
             <div class="header__lang-links">
-                <a href="index_ru.html" class="header__lang-link header__lang-link_active">Ru</a>
-                <a href="index_en.html" class="header__lang-link">En</a>
+                <a href="./index_ru.html" class="header__lang-link header__lang-link_active">Ru</a>
+                <a href="./index_en.html" class="header__lang-link">En</a>
             </div>
         </header>
 
