--- a/index_en.html
+++ b/index_en.html
@@ -14,8 +14,8 @@
             <img src="images/header-logo.svg" alt="logo" class="header__logo">
 
             <div class="header__lang-links">
-                <a href="index_ru.html" class="header__lang-link">Ru</a>
-                <a href="index_en.html" class="header__lang-link header__lang-link_active">En</a>
+                <a href="./index_ru.html" class="header__lang-link">Ru</a>
+                <a href="./index_en.html" class="header__lang-link header__lang-link_active">En</a>
             </div>
         </header>
 
