Update and rename index_ru.html to index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="images/header-logo.svg" alt="logo" class="header__logo">
         
             <div class="header__lang-links">
-                <a href="./index_ru.html" class="header__lang-link header__lang-link_active">Ru</a>
+                <a href="./index.html" class="header__lang-link header__lang-link_active">Ru</a>
                 <a href="./index_en.html" class="header__lang-link">En</a>
             </div>
         </header>
